[package]
name = "CloudflareST-Rust"
version = "1.0.0"
edition = "2024"

[features]
# default = ["icmp"]
icmp = ["dep:surge-ping"]

[dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time"], default-features = false }
hyper = { version = "1", features = ["client"], default-features = false }
hyper-util = { version = "0.1", features = ["client-legacy"], default-features = false }
hyper-rustls = { version = "0.27", features = ["ring", "webpki-roots", "http1"], default-features = false }
http = { version = "1", default-features = false }
http-body = { version = "1", default-features = false }
bytes = { version = "1", default-features = false }
tower-service = { version = "0.3", default-features = false }
terminal_size = { version = "0.4", default-features = false }
surge-ping = { version = "0.8", optional = true, default-features = false }

# --- Windows ---
[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Networking_WinSock", "Win32_Foundation", "Win32_NetworkManagement_IpHelper", "Win32_NetworkManagement_Ndis"], default-features = false }

# --- Linux ---
[target.'cfg(target_os = "linux")'.dependencies]
libc = { version = "0.2", default-features = false }

# --- macOS ---
[target.'cfg(target_os = "macos")'.dependencies]
libc = { version = "0.2", default-features = false }
